log
Wed 08 May 2024 12:30:20 AM UTC: 
 tests:  1|8
total_score: 0/70
0f11f11
Wed 08 May 2024 12:34:10 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:15: error: expected ‘;’ before ‘return’
   46 |     return new
      |               ^
      |               ;
   47 |     return NULL;
      |     ~~~~~~     
Compilation failed
cc72c1b
Wed 08 May 2024 12:34:14 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7e09348
Wed 08 May 2024 12:34:31 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
aae5cfa
Wed 08 May 2024 12:42:51 AM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 42 insertions(+)
 tests:  3|7
total_score: 5/70
be0c0d4
